# openCV_test

open_img/: CMakeLists.txt  main.cpp
saliency/: CMakeLists.txt  computeSaliency.cpp
